--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "reference-backloop",
+  "name": "reference-backloop-poc",
+  "displayName": "Reference Backloop Proof of Concept",
   "version": "1.0.0",
-  "description": "",
+  "description": "A demonstration of a unique approach in TypeScript for serializing complex object structures into a type-safe, structured format while retaining a tree-like navigation capability, enabling the retrieval of crucial serialization metadata prior to the resolution of serialization nodes, essential for future data instantiation scenarios.",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --quiet --debounce --respawn --clear -- index.ts"
+    "start": "ts-node-dev --quiet --debounce --respawn --clear -- src/index.ts",
+    "test": "npx jest"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
+  "author": {
+    "email": "vadym.iefremov@gmail.com",
+    "name": "Vadym Iefremov"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jest": "^29.5.6",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0"
   }
 }
